--- a/about.html
+++ b/about.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>about</title>
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
-    <ul>
-        <li><a href="about.html">about</a></li>
-    </ul>
+
 </head>
 <body>
-    <p> hello friends! 
-        I like cheese
-        yay
-    </p>
+    <p>elwing was here</p>
 </body>
 </html>
