--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>elwing was here</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
     <ul>
         <li><a href="about.html">about</a></li>
     </ul>
