--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
         I like cheese
         yay
     </p>
+    <img src="airplane.png" alt="aiplane postcard">
+    <img src="moon copy.jpg" alt="moon" width="500px">
 </body>
 </html>
