--- a/about.html
+++ b/about.html
@@ -10,5 +10,6 @@
 <body>
     <p>elwing was here</p>
     <img src="mountains copy.jpg" alt="moon" width="500px">
+    <img src="airplane.png" alt="aiplane postcard">
 </body>
 </html>
