--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="aboutstyles.css">
+    <ul>
+        <li><a href="index.html">home</a></li>
+    </ul>
 </head>
 <body>
     <p>elwing was here</p>
-    <img src="mountains copy.jpg" alt="moon" width="500px">
-    <img src="airplane.png" alt="aiplane postcard">
 </body>
 </html>
