--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
     <ul>
         <li><a href="about.html">about</a></li>
+        <li><a href="postcard.html">postcard</a></li>
     </ul>
 </head>
 <body>
-    <p> hello friends! 
-        I like cheese
-        yay
+    <p> hello friends!
     </p>
-    <img src="moon copy.jpg" alt="moon" width="500px">
 </body>
 </html>
