--- a/postcard.html
+++ b/postcard.html
@@ -12,6 +12,10 @@
 </head>
 <body>
     <p>skrrtskrrt</p>
+    <video width="640" height="480" controls>
+       <source src="philly vlog.mp4" type="video/mp4">
+
+    </video>
     <img src="airplane.png" alt="aiplane postcard" width="1000px">
 </body>
 </html>
