--- a/postcard.html
+++ b/postcard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+    class="postcard-bg">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,7 @@
 <body>
     <p>skrrtskrrt</p>
     <video width="640" height="480" controls>
-       <source src="philly vlog.mp4" type="video/mp4">
+       <source src="trailer.mp4" type="video/mp4">
 
     </video>
     <img src="airplane.png" alt="aiplane postcard" width="1000px">
