--- a/postcard.html
+++ b/postcard.html
@@ -12,13 +12,19 @@
 
 </head>
 <body>
-    <p>skrrtskrrt</p>
+    <h1>skrrtskrrt</h1>
     <video width="640" height="480" controls>
        <source src="trailer.mp4" type="video/mp4">
 
     </video>
     <p>
-        https://youtu.be/0fY7bFg0pVM
+        full video here:
+    </p>
+    <a href="url"> https://youtu.be/0fY7bFg0pVM 
+
+    </a>
+    <p>
+        <br> 
     </p>
     <img src="airplane.png" alt="aiplane postcard" width="1000px">
 </body>
